# event-first-stock-research

./: .gitignore  README.md  REFACTOR_PLAN.md  pyproject.toml
.github/workflows/: ci.yml  daily-stock-report.yml
docs/: agent_architecture.md  module_structure.md
src/: agent_review_legacy.py  agent_runtime.py  data_sources.py  email_daily_report.py  event_bottom_fishing.py  formatting.py  llm_prompts.py  models.py  reporting.py  scoring.py
src/efsr/: __init__.py  __main__.py  cli.py  email_report.py  models.py  portfolio.py  prompts.py  reporting.py  scoring.py  sources.py
src/efsr/agents/: __init__.py  legacy.py  runtime.py
state/: paper_portfolio.sqlite
tests/: smoke_offline.py  test_portfolio.py  test_scoring.py  test_smoke_offline.py
